rearrange the import order of webconponent and jquery to solve the bug on firefox

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -30,7 +30,7 @@ html, body
   z-index: -5
   height: 100%
   background-image: url('../asset/fabric_of_squares_gray.png')
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif
   center(960px)
   .title
     font-size: 500%
@@ -96,45 +96,45 @@ html, body
     /* This one is just for ergonomy */
     cursor: pointer
   label
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    color: #a5a39d;
-    font-size: 30px;
-    text-align: center;
-    line-height: 150px;
-    text-shadow: 0 2px 1px rgba(0,0,0,0.25);
-    border-radius: 50%;
-    background: #b25244; /* Fallback */
-    background: linear-gradient(#f7f2f6, #b2ac9e);
-    transition: all 0.2s
-    z-index: -1;
+    display: block
+    width: 100%
+    height: 100%
+    position: relative
+    color: #a5a39d
+    font-size: 30px
+    text-align: center
+    line-height: 150px
+    text-shadow: 0 2px 1px rgba(0,0,0,0.25)
+    border-radius: 50%
+    background: #b25244 /* Fallback */
+    background: linear-gradient(#f7f2f6, #b2ac9e)
+    transition: all 0.3s ease-out
+    z-index: -1
     box-shadow:
       inset 0 2px 3px rgba(255,255,255,0.13),
       0 5px 8px rgba(0,0,0,0.3),
-      0 10px 10px 4px rgba(0,0,0,0.3);
+      0 10px 10px 4px rgba(0,0,0,0.3)
     &:before
-      content: ""; 
-      position: absolute;
-      left: -10px;
-      right: -10px;
-      top: -10px;
-      bottom: -10px;
-      z-index: -2;
-      border-radius: 50%;
-      box-shadow: inset 0 10px 10px             rgba(0,0,0,0.13); 
-      -webkit-filter:blur(1px); /* Smooth trick */
-      filter: blur(1px); /* Future-proof */
+      content: "" 
+      position: absolute
+      left: -10px
+      right: -10px
+      top: -10px
+      bottom: -10px
+      z-index: -2
+      border-radius: 50%
+      box-shadow: inset 0 10px 10px             rgba(0,0,0,0.13) 
+      -webkit-filter:blur(1px) /* Smooth trick */
+      filter: blur(1px) /* Future-proof */
     &:after
-      content: ""; 
-      position: absolute;
-      left: -20px;
-      right: -20px;
-      top: -20px;
-      bottom: -20px;
-      z-index: -2;
-      border-radius: 50%;
+      content: "" 
+      position: absolute
+      left: -20px
+      right: -20px
+      top: -20px
+      bottom: -20px
+      z-index: -2
+      border-radius: 50%
       box-shadow:
         inset 0px 0px 1px 0px rgba(0,0,0,0.5)
   input:checked
@@ -169,36 +169,36 @@ html, body
       /* This one is just for ergonomy */
       cursor: pointer
     label
-      display: block;
-      width: 100%;
-      height: 100%;
-      position: relative;
-      color: #a5a39d;
-      font-size: 50px;
-      text-align: center;
-      line-height: 100px;
-      text-shadow: 0 2px 1px rgba(0,0,0,0.25);
-      border-radius: 50%;
-      background: #b25244; /* Fallback */
-      background: linear-gradient(#f7f2f6, #b2ac9e);
-      transition: all 0.3s ease-out;
-      z-index: -1;
+      display: block
+      width: 100%
+      height: 100%
+      position: relative
+      color: #a5a39d
+      font-size: 50px
+      text-align: center
+      line-height: 100px
+      text-shadow: 0 2px 1px rgba(0,0,0,0.25)
+      border-radius: 50%
+      background: #b25244 /* Fallback */
+      background: linear-gradient(#f7f2f6, #b2ac9e)
+      transition: all 0.3s ease-out
+      z-index: -1
       box-shadow:
         inset 0 2px 3px rgba(255,255,255,0.13),
         0 5px 8px rgba(0,0,0,0.3),
-        0 10px 10px 4px rgba(0,0,0,0.3);
+        0 10px 10px 4px rgba(0,0,0,0.3)
       &:before
-        content: ""; 
-        position: absolute;
-        left: -10px;
-        right: -10px;
-        top: -10px;
-        bottom: -10px;
-        z-index: -2;
-        border-radius: 50%;
-        box-shadow: inset 0 10px 10px             rgba(0,0,0,0.13); 
-        -webkit-filter:blur(1px); /* Smooth trick */
-        filter: blur(1px); /* Future-proof */
+        content: "" 
+        position: absolute
+        left: -10px
+        right: -10px
+        top: -10px
+        bottom: -10px
+        z-index: -2
+        border-radius: 50%
+        box-shadow: inset 0 10px 10px             rgba(0,0,0,0.13) 
+        -webkit-filter:blur(1px) /* Smooth trick */
+        filter: blur(1px) /* Future-proof */
     input:checked
       ~ label
           color: #7f543f
